<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~   * Copyright 2015 Accela, Inc.
  ~   *
  ~   * You are hereby granted a non-exclusive, worldwide, royalty-free license to
  ~   * use, copy, modify, and distribute this software in source code or binary
  ~   * form for use in connection with the web services and APIs provided by
  ~   * Accela.
  ~   *
  ~   * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~   * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~   * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~   * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~   * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~   * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
  ~   * DEALINGS IN THE SOFTWARE.
  ~   *
  ~   */
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ShowTextActivity">

    <TextView
            android:id="@+id/show_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"/>

</merge>
